# memex

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN_NOTES.md  GOALS.md  LICENSE  README.md  ROADMAP.md  TODO.md  USER_GUIDE.md  plugin.json  pyproject.toml
.ai/: ACTIVE.md  DIGEST.md
.ai/wiki/: approval-gate-with-escape-hatches.md  design-for-async-agents.md  inbox-raw-wiki-pipeline.md  mandatory-skill-invocation.md  memex-disk-layer.md  self-improvement-loop.md  session-snapshot-format.md  skill-cso-description-trap.md  sqlite-crash-safety.md  tdd-for-skill-authoring.md  testable-metric-constraint.md  two-tier-instruction-loading.md
.claude-plugin/: plugin.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  notify-agora.yml  release.yml
db/: agents.sql  brain.sql  code_graph.sql  index.sql  internal_agents_seed.py  migrations_table.sql  schema.sql
docs/: BRAIN.md  CORE.md  INDEX.md  LESSON_FORMAT.md  MEMEX_SPEC.md  PACKAGING.md  WIKI_PAGE_FORMAT.md
docs/plans/: 2026-05-16-memex-v2-plan-1-core.md  2026-05-16-memex-v2-plan-2-index-agents.md  2026-05-16-memex-v2-plan-3-brain.md  2026-05-16-memex-v2-plan-4-packaging.md  2026-05-17-embedding-unavailable-plan.md  2026-05-17-install-hardening-plan.md
docs/specs/: 2026-05-16-memex-v2-redesign-design.md  2026-05-17-embedding-unavailable-design.md  2026-05-17-install-hardening-design.md
lessons/: README.md
prompts/: community_reporter.md  global_map.md  global_reduce.md  librarian.md  reference_librarian.md  synthesizer.md
scripts/: __init__.py  _internal_agents_seed.py  agents.py  brain.py  bump.py  code_graph.py  communities.py  dashboard.py  db.py  embeddings.py  graph_build.py  install.py  onboarding.py  paths.py  rebuild.py  recommended_settings.py  registry.py  release.py  roles.py  search.py  stores.py  sync.py  upgrade_from_v1.py
scripts/agents/: dba.py  (+7 more)
skills/: README.md
sources/: README.md
tests/: README.md  conftest.py  test_agents.py  test_agents_cli_smoke.py  test_agents_schema.py  test_archivist.py  test_bootstrap_guard.py  test_brain_ask.py  test_brain_capture.py  test_brain_docs.py  test_brain_graphrag_ask.py  test_brain_ingest.py  test_brain_lint.py  test_brain_schema.py  test_brain_synthesize.py  test_bump.py  test_capture_lesson_skill.py  test_capture_skill.py  test_changelog.py  test_code_graph.py  test_code_graph_schema.py  test_communities.py  test_community_reporter.py  test_core_docs.py  test_dashboard.py  test_data_steward.py  test_db.py  test_dba.py  test_embeddings.py  test_graph_build.py  test_index_docs.py  test_index_schema.py  test_install.py  test_install_alt_cwd.py  test_internal_agents_seed.py  test_librarian_harness.py  test_migrations_snippet.py  test_model_tier_dispatch.py  test_modules_import_clean.py  test_onboarding.py  (+35 more)
(+93 files in other folders)
