[project]
name = "memex"
version = "2.15.0"
description = "Memex Core: structured memory and shared knowledge runtime for AI agents."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

# ----------------------------------------------------------------------------
# Lint & format — Ruff
# ----------------------------------------------------------------------------
# Ruff replaces flake8 / isort / pyupgrade / pylint here. The selected rule set
# is pragmatic: catch real bugs and stale syntax, avoid stylistic bikeshed.
# Run locally:  ruff check --fix && ruff format
# CI enforces:  ruff check && ruff format --check

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "dist",                          # release bundles (manifest tracked, body gitignored)
    ".superpowers",                  # local brainstorm session artifacts
    "tests/fixtures",                # test fixtures may include intentionally-malformed data
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (likely bugs)
    "C4",   # comprehensions
    "UP",   # pyupgrade (modern syntax)
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-too-long — the formatter handles wrapping where it can; long URLs/strings get a pass
]

[tool.ruff.lint.per-file-ignores]
# Agent profiles are long-form natural-language strings with deliberate
# typography (em-dashes, en-dashes for ranges, etc.); linting them as code
# strings is a false positive. v2.5.0 moved the file from db/ to scripts/
# and added hash-pinning imports at the bottom of the module (E402) —
# computing the seed hash requires the agent list to be defined first.
# Defensive narrow scope: current ruff version finds 0 violations on this
# file, but the rationale is real (em-dashes present in profile strings)
# so future stricter ruff versions won't surprise CI.
"scripts/_internal_agents_seed.py" = ["RUF001", "RUF003", "E402"]

# ----------------------------------------------------------------------------
# Security — Bandit
# ----------------------------------------------------------------------------
# Bandit catches Python-specific security antipatterns: shell injection,
# hardcoded credentials, weak crypto, unsafe deserialization, etc.
# Run locally:  bandit -c pyproject.toml -r scripts internal skills
# CI enforces the same.

[tool.bandit]
exclude_dirs = ["tests", "dist", ".superpowers", ".github"]
skips = [
    "B101",   # assert_used — assertions in production code are intentional invariants here
]
